<resources>
    <string name="app_name">AppCTCT</string>
    <string name="ctct">CTCT</string>
    <string name="userName">UserName</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register Here</string>
    <string name="loginFacebook">Login with Facebook</string>
    <string name="fullname">Full Name</string>
    <string name="email">Email</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="registerNow">Register Now</string>
    <string name="avatar">Avatar</string>
    <string name="welearnweshare">We learn We share</string>
    <string name="question">Question</string>
    <string name="currentpassword">Current Password</string>
    <string name="newpassword">New Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="confirm">Confirm</string>
    <string name="empty">Empty</string>
    <string name="changepassword">Change Password</string>
    <string name="phonenumber">Phone Number</string>
    <string name="updatephonenumber">Update Phone Number</string>
    <string name="permission">Permission</string>
    <string name="memberCTCT">Only Member CTCT</string>
    <string name="notification">Notification</string>
    <string name="code_ctct">Code</string>
    <string name="currentphone">Current Phone</string>
    <string name="newphone">New Phone</string>
    <string name="confirmphonenumber">Confirm Phone Number</string>
    <string name="confirmcode">Confirm Code</string>
    <string name="facebook_app_id">251872742352854</string>
    <string name="fb_login_protocol_scheme">fb251872742352854</string>
    <string name="tvDialogChoice">Please choice</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="numberPhone">Phone Number</string>
    <string name="logout">Log out</string>
    <string name="label">Label</string>
    <string name="user">User</string>
    <string name="points">Points</string>
    <string name="camera">Camera</string>
    <string name="showPassword">Show Password</string>
    <string name="codeverification">Code Verification</string>
    <string name="currentphonenumber">Current Phone Number</string>
    <string name="newphonenumber">New Phone Number</string>
    <string name="welcometoctct">Welcome to CTCT</string>
    <string name="seeall">See all</string>
    <string name="math1">Math One</string>
    <string name="math2">Math Two</string>
    <string name="physical1">Physical One</string>
    <string name="physical2">Physcal Two</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="loading">Loading</string>
    <string name="noresult">Search no result</string>
    <string name="codemember">Enter code member</string>
    <string name="noinformation">No Information</string>
    <string name="nopermisstion">No Permission</string>
    <string name="updateemail">Update Email</string>
    <string name="showresult">Result for you</string>
    <string name="title_activity_pdfreader">PDFReader</string>
    <string name="endtime">End Time</string>
    <string name="loadingresultforyou">Loading result for you</string>
    <string name="congratulation">Conratulation on completing the test</string>
    <string name="rate">Rate:</string>
    <string name="ratio">Ratio:</string>
    <string name="point">Point:</string>
    <string name="clickseetop">Click to see Top Point</string>
    <string name="gotodocument">Go to Documents</string>
    <string name="pleasechoicetest">Please choice one item</string>
    <string name="offlinetest">Offline Test</string>
    <string name="tested">Tested</string>
    <string name="nochoice">No Choice</string>
    <string name="notestonline">No Test Online</string>
    <string name="notestoffline">No Test Offline</string>
    <string name="notesttested">No Test Tested</string>
    <string name="pointrank">Point Ranking</string>
    <string name="noinformationindividual">No Information Individual</string>
    <string name="author">Author</string>
    <string name="kind">Kind</string>
    <string name="information">Inf</string>
    <string name="dateupload">Date</string>
    <string name="booktop">Book Top</string>
    <string name="booksame">Book Same</string>
    <string name="bookratio">Book Ratio</string>
    <string name="comment">List Comment</string>
    <string name="addcomment">Add comment</string>
    <string name="producevalution">Product Evalution</string>
    <string name="nocomment">No Comment</string>
    <string name="clicktoseethedocument">Click To See The Document</string>
    <string name="rateview">Rate View</string>
    <string name="writecomment">Write Comment</string>
    <string name="ratestart">Rate Start</string>
    <string name="sendcomment">Send Comment</string>
    <string name="sumNumber">/5</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="follow">Follows</string>
    <string name="like">Likes</string>
    <string name="admin">Admin</string>
    <string name="nostatus">No Status</string>
    <string name="unfollow">Unfollow</string>
</resources>
