<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <ImageView
        android:contentDescription="@string/label"
        android:src="@drawable/bell"
        android:layout_marginTop="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/imgBell"
        android:layout_width="80dp"
        android:layout_height="80dp" />
    <TextView
        android:text="@string/congratulation"
        android:textColor="@color/black_overlay"
        android:textSize="15sp"
        android:textStyle="italic"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/imgBell"
        android:id="@+id/tvCongratulaion"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvPoint"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tvCongratulaion"
        app:layout_constraintLeft_toLeftOf="@id/tvCongratulaion"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:text="@string/point"
        android:layout_width="50dp"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/tvTextPoint"
        app:layout_constraintTop_toTopOf="@id/tvPoint"
        app:layout_constraintLeft_toRightOf="@id/tvPoint"
        android:textSize="15sp"
        android:textColor="@color/color_red"
        android:text="@string/label"
        android:layout_width="50dp"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tvRate"
        android:text="@string/rate"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/tvPoint"
        app:layout_constraintLeft_toLeftOf="@id/tvPoint"
        android:layout_width="50dp"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/tvTextRate"
        app:layout_constraintTop_toTopOf="@id/tvRate"
        app:layout_constraintLeft_toRightOf="@id/tvRate"
        android:textSize="15sp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/label"
        android:layout_width="50dp"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/tvRate"
        app:layout_constraintLeft_toLeftOf="@id/tvRate"
        android:id="@+id/tvRatio"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:text="@string/ratio"
        android:layout_width="50dp"
        android:layout_height="wrap_content" />
    <RatingBar
        android:progressTint="@color/colorOrange"
        android:secondaryProgressTint="@color/colorOrange"
        android:id="@+id/rbRatioResult"
        android:foregroundGravity="center"
        android:numStars="5"
        android:rating="3"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        style="?android:attr/ratingBarStyleSmall"
        app:layout_constraintLeft_toRightOf="@id/tvRatio"
        app:layout_constraintTop_toTopOf="@id/tvRatio"
        android:layout_width="wrap_content"
        android:layout_height="15dp" />

    <TextView
        android:id="@+id/tvClickToSeeTop"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/rbRatioResult"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/clickseetop"
        android:textStyle="italic"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <View
        android:background="@color/black_overlay"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvClickToSeeTop"
        app:layout_constraintRight_toRightOf="@id/tvCongratulaion"
        app:layout_constraintLeft_toLeftOf="@id/tvCongratulaion"
        android:layout_width="0dp"
        android:layout_height="1dp"/>

</android.support.constraint.ConstraintLayout>