<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TableLayout
        android:background="@drawable/table_stroke"
        android:id="@+id/tb_layout_informaition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow>
            <TextView
                android:background="@drawable/table_row"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:gravity="center"
                android:text="@string/author"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                />
            <TextView
                android:background="@drawable/table_row"
                android:id="@+id/tvNameAuthor"
                android:textStyle="italic"
                android:textSize="13sp"
                android:textColor="@color/black_overlay"
                android:layout_weight="2"
                android:gravity="center"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:text="@string/label"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:background="@drawable/table_row"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:gravity="center"
                android:text="@string/kind"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                />
            <TextView
                android:background="@drawable/table_row"
                android:id="@+id/tvNameKind"
                android:textStyle="italic"
                android:textSize="13sp"
                android:textColor="@color/black_overlay"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/label"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:background="@drawable/table_row"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:gravity="center"
                android:text="@string/information"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                />
            <TextView
                android:background="@drawable/table_row"
                android:id="@+id/tvInfomationBook"
                android:textStyle="italic"
                android:textSize="13sp"
                android:textColor="@color/black_overlay"
                android:layout_weight="2"
                android:gravity="left"
                android:text="@string/label"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:background="@drawable/table_row"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:gravity="center"
                android:text="@string/dateupload"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                />
            <TextView
                android:background="@drawable/table_row"
                android:id="@+id/tvDateUpLoaddBook"
                android:textStyle="italic"
                android:textSize="13sp"
                android:textColor="@color/black_overlay"
                android:layout_weight="2"
                android:gravity="center"
                android:text="3312312"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                />
        </TableRow>

    </TableLayout>

</LinearLayout>