<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Login.Register_Activity"
    android:background="@color/colorAccent">
    <EditText
        android:inputType="text"
        android:maxLines="1"
        android:id="@+id/edFullName"
        android:background="@drawable/custom_edittext"
        android:textColor="@color/colorTextLogin"
        android:textSize="15sp"
        android:hint="@string/fullname"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="300dp"
        android:layout_height="40dp" />
    <TextView
        android:textColor="@color/colorTextLogin"
        android:id="@+id/tvAvatar"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/edFullName"
        app:layout_constraintLeft_toLeftOf="@+id/edFullName"
        android:textStyle="italic"
        android:textSize="16sp"
        android:text="@string/avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <ImageView
        android:contentDescription="@null"
        android:src="@drawable/avt"
        app:layout_constraintTop_toTopOf="@id/tvAvatar"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintLeft_toRightOf="@id/tvAvatar"
        android:id="@+id/imgAvatar"
        android:layout_width="120dp"
        android:layout_height="120dp" />
    <ImageView
        android:contentDescription="@null"
        android:id="@+id/imgCamera"
        app:layout_constraintTop_toTopOf="@id/imgAvatar"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintLeft_toRightOf="@+id/imgAvatar"
        android:scaleType="fitXY"
        android:src="@drawable/ic_camera"
        android:layout_width="30dp"
        android:layout_height="30dp" />
    <ImageView
        android:contentDescription="@null"
        android:id="@+id/imgCollection"
        app:layout_constraintTop_toBottomOf="@id/imgCamera"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="@+id/imgCamera"
        android:scaleType="fitXY"
        android:src="@drawable/ic_collection"
        android:layout_width="30dp"
        android:layout_height="30dp" />
    <EditText
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:drawableStart="@drawable/ic_user"
        android:id="@+id/edUser"
        android:background="@drawable/custom_edittext"
        android:drawableLeft="@drawable/ic_user"
        android:textColor="@color/colorTextLogin"
        android:textSize="15sp"
        android:hint="@string/userName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/imgAvatar"
        android:layout_width="300dp"
        android:layout_height="40dp" />
    <EditText
        android:inputType="textPassword"
        android:maxLines="1"
        android:id="@+id/edPassword"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/ic_password"
        android:textColor="@color/colorTextLogin"
        android:textSize="15sp"
        android:hint="@string/password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/edUser"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:drawableLeft="@drawable/ic_password" />
    <EditText
        android:inputType="textPassword"
        android:maxLines="1"
        android:id="@+id/edConfirmPassword"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/ic_password"
        android:textColor="@color/colorTextLogin"
        android:textSize="15sp"
        android:hint="@string/confirmPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/edPassword"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:drawableLeft="@drawable/ic_password" />
    <Button
        android:id="@+id/btRegister"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/registerNow"
        android:background="@drawable/custom_button_enable"
        app:layout_constraintLeft_toLeftOf="@+id/edConfirmPassword"
        app:layout_constraintRight_toRightOf="@id/edConfirmPassword"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/edConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="40dp" />
</android.support.constraint.ConstraintLayout>