<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite">

    <TextView
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:textSize="20dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:id="@+id/tvTitle"
        android:text="@string/tvDialogChoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <CheckBox
        android:buttonTint="@color/black"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        android:id="@+id/cbEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:textStyle="italic"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="6dp"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:text="@string/email"
        app:layout_constraintLeft_toRightOf="@id/cbEmail"
        app:layout_constraintTop_toTopOf="@+id/cbEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />
    <TextView
        android:textStyle="italic"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/cbPhone"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="6dp"
        android:textSize="14sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@+id/cbPhone"
        android:text="@string/phonenumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />
    <CheckBox
        android:buttonTint="@color/black"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/cbEmail"
        android:id="@+id/cbPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/btConfirm"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/cbPhone"
        android:background="@drawable/custom_button_enable"
        android:text="@string/confirm"
        android:layout_width="200dp"
        android:layout_height="40dp"
        />


</android.support.constraint.ConstraintLayout>